# solar-cloud-predictor

./: CMakeLists.txt  MotorMqttClient.cpp  MotorMqttClient.hpp  README.md  alphabot_listener.py  camera.py  client.py  main.cpp  motor.cpp  test.py
